--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,56 @@
   }
 }
 
+@font-face {
+  font-family: 'Lexend Exa';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lexendexa/v22/UMNy_rNs-HjP0h-35ZJc9bK5Bxfp.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.artteam-hero-image-container {
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  height: 0;
+  padding-bottom: 50%; /* This creates the 2:1 aspect ratio */
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.artteam-about-us-image-container {
+  position: relative;
+  width: 100%;
+  max-width: 550px;
+  height: 100%;
+  max-height: 550px;
+
+  /* padding-bottom: 100%; */
+  border-radius: 16px;
+  overflow: hidden;
+  justify-self: center;
+}
+
+.language-switcher-button-pop-up:hover {
+  opacity: 100;
+  visibility: visible;
+
+  /* You can also adjust the transition duration to make it slower */
+  transition: transform 0.3s ease-in-out;
+}
+
+/* On very large screens, cap the height to prevent vertical stretching */
+@media (min-width: 1200px) {
+  .artteam-hero-image-container {
+    height: 600px;
+    padding-bottom: 0;
+  }
 }
